@@ -1,5 +1,10 @@
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
 
+	* MainForm.cs: Changed _selectedPatron from just an int to a
+	  Patron object
+
+2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
+
 	* MainForm.cs: Set date picker now
 	Slight changes to the name search stuff now
 	Fixed typo with media check in
